--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <div class="col-4">
       <!-- Button trigger modal -->
-      <input type ="submit" form = "myForm" class="btn btn-primary" value="Print" />
+      <!-- <input type ="submit" form = "myForm" class="btn btn-primary" value="Print" /> -->
     </div>
 
     <div class = "col-4">
