--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 
 <div id="buttons" class="container">
-  <form id="myForm" action = "action.php" method="post" target="_blank">
+  <form id="myForm" action = "submit.php" method="post" target="_blank">
     <div class="row justify-content-center">
       <div id="main1" class="main col-lg-6">
       </div>
