--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <div class="col-4">
       <!-- Button trigger modal -->
-      <input type ="submit" form = "myForm" class="btn btn-primary" value="Print" />
+      <input type ="submit" form = "" class="btn btn-danger" value="Print" />
     </div>
 
     <div class = "col-4">
@@ -81,9 +81,6 @@
       </div>
       <div id="main2" class="main col-lg-6">
       </div>
-    </div>
-    <div class="col-6">
-      <!-- <button id="submit" type="button" class="btn btn-primary mb-3">SUBMIT</button> -->
     </div>
   </form>
 </div>
